--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,16 @@ footer a:hover {
     color: #4A51EA;
 }
 
+.tooltip-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip-wrapper .tooltip {
+    visibility: hidden;
+    position: absolute;
+}
+
 .book {
     max-width: 72px;
     margin: 4px;
